welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:12: error: ')' expected but integer literal found.
  for (i <-rte 0 to (taille - 1))
               ^Array2:12: error: illegal start of simple expression
  for (i <-rte 0 to (taille - 1))
                                ^